AMBARI-23146 Alignment issues for checkboxes and radio buttons
(cherry picked from commit 220b892c8dffa9027687ab0db25714a2df9d6467)

--- a/ambari-web/app/styles/bootstrap_overrides.less
+++ b/ambari-web/app/styles/bootstrap_overrides.less
@@ -448,3 +448,8 @@ input[type="checkbox"]:checked + label:after {
 .form-horizontal .checkbox-inline {
   padding-top: 0;
 }
+
+.radio, .checkbox {
+  margin-bottom: 0;
+  margin-top: 0;
+}
